[skip ci] update README