@@ -2,197 +2,25 @@
 ![Modrinth Downloads](https://img.shields.io/modrinth/dt/Ohwb2cTF?label=Downloads&logo=modrinth&style=flat-square)
 [![Discord](https://img.shields.io/discord/607123183249653770?label=Discord&logo=discord&style=flat-square)](https://discord.gg/Yj9WH3P8RN)
 
-<details>
-<summary>🇹🇼 中文介紹</summary>
-
-<h3>關於模組包</h3>
-<ul>
-    <li>基於 <a href="https://modrinth.com/mod/sodium">Sodium</a> 渲染引擎及其他優化模組來優化效能</li>
-    <li>內含 <a href="https://modrinth.com/mod/iris">Iris</a> 光影模組，可以安裝<a href="https://modrinth.com/shaders?g=categories:iris">支援 Iris 的光影</a></li>
-    <li>內含 <a href="https://modrinth.com/mod/e4mc">e4mc</a>，讓好友加入你的單人世界更方便</li>
-    <li>遊戲內各種特殊場景效能<a href="https://modrinth.com/modpack/tnvbp/gallery">截圖圖庫</a></li>
-</ul>
-
-<h3>更新狀態</h3>
-<ul>
-    <table>
-        <tr>
-            <th></th>
-            <th>⛔ 已停止</th>
-            <th>✅ 支援中</th>
-        </tr>
-        <tr>
-            <th rowspan="20"><p>Minecraft</p>Versions</th>
-            <th></th>
-            <th>1.21.11</th>
-        </tr>
-        <tr>
-            <th>1.21.10</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.21.8</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.21.4</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th>1.21.1</th>
-        </tr>
-        <tr>
-            <th>1.21</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.20.6</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th>1.20.1</th>
-        </tr>
-        <tr>
-            <th>1.19.2 ~ 1.20</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.18.2</th>
-            <th></th>
-        </tr>
-    </table>
-</ul>
-
-<h3>Java 下載及設定</h3>
-<ul>
-    <p>推薦使用最新的 Java 版本</p>
-    <table>
-        <tr>
-            <th>Java 25</th>
-        </tr>
-        <tr>
-            <th><a href="https://adoptium.net/temurin/releases?version=25&os=any&arch=any">Adoptium</a></th>
-        </tr>
-    </table>
-    <table>
-        <tr>
-            <th colspan="2">記憶體設定</th>
-        </tr>
-        <tr>
-            <th>最大記憶體使用量</th>
-            <th>4096 MB</th>
-        </tr>
-        <tr>
-            <th>最小記憶體使用量</th>
-            <th>4096 MB</th>
-        </tr>
-    </table>
-    <h4>JVM 參數</h4>
-    <pre><code>-XX:+UseZGC</code></pre>
-</ul>
-
-<h3>問題/意見回報</h3>
-<ul>
-    <li><a href="https://github.com/TN-TechNoob/TNVBP/issues">Github Issues Tracker</a></li>
-    <li>Discord 群：<a href="https://discord.gg/Yj9WH3P8RN">TNSU丨塔可努的太空烏托邦</a></li>
-</ul>
-
-</details>
-
 <h3>About Modpack</h3>
 <ul>
-    <li>High performance Sodium + </li>
-    <li>Include the <a href="https://modrinth.com/mod/iris">Iris shader mod</a>, so you can install <a href="https://modrinth.com/shaders?g=categories:iris">shaders that Iris support</a></li>
-    <li>Include the <a href="https://modrinth.com/mod/e4mc">e4mc</a> mod so your friends can easily connect to your single player world</li>
-    <li><a href="https://modrinth.com/modpack/tnvbp/gallery">In-game benchmark screenshots</a></li>
+    <li><strong>High Performance</strong> - Increase single and multiplayer performance by using <a href="https://modrinth.com/mod/sodium">Sodium</a> mods and other optimization mods</li>
+    <li><strong>QOL</strong> - Include mods like <a href="https://modrinth.com/mod/journeymap">JourneyMap</a>, <a href="https://modrinth.com/mod/jade">Jade 🔍</a>, <a href="https://modrinth.com/mod/better-stats">Better Statistics Screen</a>, <a href="https://modrinth.com/user/masa/mods">several Masa's popular mods</a> to make things a lot easier</li>
+    <li><strong>In-game Resource packs, Shaders and also Data Packs Download</strong> - Achieve these by using the <a href="https://modrinth.com/mod/resourcify">Resourcify</a> mod</li>
 </ul>
 
-<h3>Update Status</h3>
+<h3>Recommended JVM Arguments</h3>
 <ul>
-    <table>
-        <tr>
-            <th></th>
-            <th>⛔ Deprecated</th>
-            <th>✅ Current</th>
-        </tr>
-        <tr>
-            <th rowspan="20"><p>Minecraft</p>Versions</th>
-            <th></th>
-            <th>1.21.11</th>
-        </tr>
-        <tr>
-            <th>1.21.10</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.21.8</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.21.4</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th>1.21.1</th>
-        </tr>
-        <tr>
-            <th>1.21</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.20.6</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
-            <th>1.20.1</th>
-        </tr>
-        <tr>
-            <th>1.19.2 ~ 1.20</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>1.18.2</th>
-            <th></th>
-        </tr>
-    </table>
-</ul>
-
-<h3>Java Download & Configuration</h3>
-<ul>
-    <p>The latest version of Java is recommended</p>
-    <table>
-        <tr>
-            <th>Java 25</th>
-        </tr>
-        <tr>
-            <th><a href="https://adoptium.net/temurin/releases?version=25&os=any&arch=any">Adoptium</a></th>
-        </tr>
-    </table>
-    <table>
-        <tr>
-            <th colspan="2">Memory Settings</th>
-        </tr>
-        <tr>
-            <th>Maximum</th>
-            <th>4096 MB</th>
-        </tr>
-        <tr>
-            <th>Minimum</th>
-            <th>4096 MB</th>
-        </tr>
-    </table>
-    <h4>JVM arguments</h4>
-    <pre><code>-XX:+UseZGC</code></pre>
+    <h4>Java >= 23</h4>
+    <pre><code>-Xms4G -Xmx4G -XX:+UseZGC</code></pre>
+    <h4>Java >= 15 & <= 21</h4>
+    <pre><code>-Xms4G -Xmx4G -XX:+UseZGC -XX:+ZGenerational</code></pre>
 </ul>
 
 <h3>Issue Report or Suggestion</h3>
 <ul>
     <li><a href="https://github.com/TN-TechNoob/TNVBP/issues">Github Issue Tracker</a></li>
-    <li>Discord Server: <a href="https://discord.gg/Yj9WH3P8RN">TNSU丨TechNoob's Space Utopia</a></li>
+    <li><a href="https://discord.gg/Yj9WH3P8RN">Discord Server</a></li>
 </ul>
 
 <h3>支持塔可努丨TechNoob (ECPay綠界科技)</h3>
